@@ -622,12 +622,12 @@ $cfgSources['kolab'] = array(
         'workCity'          => 'addr-business-locality',
         'workProvince'      => 'addr-business-region',
         'workPostalCode'    => 'addr-business-postal-code',
-        'workCountry'       => 'addr-business-country',
+        'workCountryFree'   => 'addr-business-country',
         'homeStreet'        => 'addr-home-street',
         'homeCity'          => 'addr-home-locality',
         'homeProvince'      => 'addr-home-region',
         'homePostalCode'    => 'addr-home-postal-code',
-        'homeCountry'       => 'addr-home-country',
+        'homeCountryFree'   => 'addr-home-country',
         /* Communications */
         'emails'            => 'emails',
         'homePhone'         => 'phone-home1',
@@ -660,9 +660,9 @@ $cfgSources['kolab'] = array(
                                'nickname', 'gender', 'birthday', 'spouse',
                                'anniversary', 'children', 'photo'),
         _("Location") => array('workStreet', 'workCity', 'workProvince',
-                               'workPostalCode', 'workCountry',
+                               'workPostalCode', 'workCountryFree',
                                'homeStreet', 'homeCity', 'homeProvince',
-                               'homePostalCode', 'homeCountry'),
+                               'homePostalCode', 'homeCountryFree'),
         _("Communications") => array('emails', 'homePhone', 'workPhone',
                                      'cellPhone', 'fax', 'instantMessenger'),
         _("Organization") => array('title', 'role', 'company', 'department',
