@@ -40,6 +40,7 @@
  </stability>
  <license uri="http://www.horde.org/licenses/asl">ASL</license>
  <notes>
+* [jan] Add free-text country attributes and use them in default Kolab backend (Request #11692).
 * [gwr] Fix handling empty dates in the Kolab driver (Bug #11691).
 * [jan] Use encoded UIDs as IDs in Kolab driver.
 * [jan] Fix searching shares for duplicates.
@@ -1523,6 +1524,7 @@
    <date>2012-10-30</date>
    <license uri="http://www.horde.org/licenses/asl">ASL</license>
    <notes>
+* [jan] Add free-text country attributes and use them in default Kolab backend (Request #11692).
 * [gwr] Fix handling empty dates in the Kolab driver (Bug #11691).
 * [jan] Use encoded UIDs as IDs in Kolab driver.
 * [jan] Fix searching shares for duplicates.
